--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,13 @@ pids/
 coverage/
 *.lcov
 
-# Assets (大文件)
-assets/
+# Large PDF files (over 100MB)
+assets/pdfs/*.pdf
+
+# Large binary files
+**/*.node
+
+# Other large assets
 public/images/large/
 
 # Cache
