--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "extract-images": "node scripts/extract-pdf-images.js",
-    "update-images": "node scripts/update-image-paths.js",
+    "update-images": "./deployment/update-images.sh",
     "setup-images": "npm run extract-images && npm run update-images",
     "optimize-images": "node scripts/optimize-images.js",
     "generate-deploy-config": "node scripts/generate-deployment-config.js",
     "prepare-deploy": "npm run optimize-images && npm run generate-deploy-config",
     "deploy-tencent": "./deployment/one-click-deploy.sh",
     "deploy-server-only": "./deployment/deploy-server.sh",
-    "update-images": "./deployment/update-images.sh",
     "update-lightweight": "./deployment/update-lightweight.sh",
     "check-deployment": "./deployment/check-deployment.sh",
     "cleanup-duplicates": "./scripts/cleanup-duplicates.sh",
@@ -23,6 +22,8 @@
     "optimize-storage": "node scripts/cleanup-and-optimize.js"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.0",
@@ -31,7 +32,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.16.0",
-    "sharp": "^0.34.4"
+    "sharp": "^0.34.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -41,7 +45,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
 }
